crates/keron-lang/tests/corpus/errors/parse/missing_value.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: found end of input expected any, '#', '"true"', '"false"', '"', '-', or int
  --> 2:1
  |
2 | 
  | ^
